# GQL

./: .gitignore  Cargo.toml  Makefile
crates/gitql-ast/: Cargo.toml
crates/gitql-ast/src/: aggregation.rs  date_utils.rs  enviroment.rs  environment.rs  expression.rs  function.rs  object.rs  statement.rs  types.rs  value.rs
crates/gitql-cli/: Cargo.toml
crates/gitql-cli/src/: colored_stream.rs  diagnostic_reporter.rs  render.rs  reporter.rs
crates/gitql-engine/: Cargo.toml
crates/gitql-engine/src/: engine.rs  engine_evaluator.rs  engine_executor.rs  engine_function.rs
crates/gitql-parser/: Cargo.toml
crates/gitql-parser/src/: context.rs  diagnostic.rs  parser.rs  tokenizer.rs  type_checker.rs
scripts/: build.sh  install.sh  test.sh
