[package]
name = "gitql-ast"
authors = ["AmrDeveloper"]
version = "0.11.0"
edition = "2021"
description = "GitQL Abstract syntax tree (AST)"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-ast"
license = "MIT"

[lib]
name = "ast"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
strip = "debuginfo"

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.31"
serde_json = "1.0.111"
csv = "1.3.0"
